WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13369
REGRESSION (
r13366
): Invisible table cell background is painted
https://bugs.webkit.org/show_bug.cgi?id=13369
Summary
REGRESSION (r13366): Invisible table cell background is painted
mitz
Reported
2007-04-17 03:20:47 PDT
[Split off from
bug 13317
] Table cells with visibility:hidden paint their table section and row backgrounds. See that attached test case.
Attachments
Test case
(2.22 KB, text/html)
2007-04-17 03:22 PDT
,
mitz
no flags
Details
Avoid painting any backgrounds behind invisible cells
(28.75 KB, patch)
2007-04-17 03:44 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-04-17 03:22:38 PDT
Created
attachment 14057
[details]
Test case Opera, Safari 2 and WinIE render nine green squares. Firefox gives radically different results.
mitz
Comment 2
2007-04-17 03:44:28 PDT
Created
attachment 14058
[details]
Avoid painting any backgrounds behind invisible cells
Darin Adler
Comment 3
2007-04-17 07:57:52 PDT
Comment on
attachment 14058
[details]
Avoid painting any backgrounds behind invisible cells r=me
Mark Rowe (bdash)
Comment 4
2007-04-17 22:18:29 PDT
Landed in
r20931
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug