WebCore/rendering/RenderTableCell.cpp
@@ -759,6 +759,9 @@ void RenderTableCell::paintBackgroundsBehindCell(PaintInfo& paintInfo, int tx, i
     if (!backgroundObject)
         return;
 
+    if (style()->visibility() != VISIBLE)
+        return;
+
     RenderTable* tableElt = table();
     if (!tableElt->collapseBorders() && style()->emptyCells() == HIDE && !firstChild())
         return;
